--- a/SourceCode/WeShare.BusinessLogic/WeShare.BusinessLogic.csproj
+++ b/SourceCode/WeShare.BusinessLogic/WeShare.BusinessLogic.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLTaskAssignment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BLTasks.cs" />
     <Compile Include="BLUsers.cs" />
