Added jquery files to implement validation and constants class to avoid hard coded string values

--- a/SourceCode/WeShare/WeShare.Web.csproj
+++ b/SourceCode/WeShare/WeShare.Web.csproj
@@ -52,8 +52,11 @@
   <ItemGroup>
     <Content Include="Images\img_delete.gif" />
     <Content Include="Images\img_edit.gif" />
+    <Content Include="Scripts\additional-methods.js" />
+    <Content Include="Scripts\jquery-1.11.1.js" />
     <Content Include="Scripts\jquery-ui.js" />
     <Content Include="Scripts\jquery.js" />
+    <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Styles\Images\arrow.gif" />
     <Content Include="Styles\Images\arrowsub.gif" />
     <Content Include="Styles\Images\mainbk.png" />
