--- a/.gitignore
+++ b/.gitignore
@@ -14,13 +14,29 @@ hs_err_pid*
 *.pdb
 *.txt
 *.dll
-*.dll
-*.dll
-*.dll
-*.cache
-*.cache
-*.txt
-*.cache
-*.cache
-*.txt
-*.cache
+[Dd]ebug*/
+[Bb]in
+#ignore thumbnails created by windows
+Thumbs.db
+#Ignore files build by Visual Studio
+*.obj
+*.exe
+*.user
+*.aps
+*.pch
+*.vspscc
+*_i.c
+*_p.c
+*.ncb
+*.suo
+*.tlb
+*.tlh
+*.bak
+*.ilk
+*.log
+*.lib
+*.sbr
+obj/
+[Rr]elease*/
+_ReSharper*/
+[Tt]est[Rr]esult*
