--- a/SourceCode/WeShare.DataAccess/WeShare.DataAccess.csproj
+++ b/SourceCode/WeShare.DataAccess/WeShare.DataAccess.csproj
@@ -44,6 +44,7 @@
     <Compile Include="DAHelper.cs" />
     <Compile Include="DATaskAssignment.cs" />
     <Compile Include="DATasks.cs" />
+    <Compile Include="DbConstants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DAUser.cs" />
   </ItemGroup>
