added recursive and type features of tasks.
made necessary changes to stored procedures and aspx files and its respective data layers

--- a/SourceCode/WeShare/WeShare.Web.csproj
+++ b/SourceCode/WeShare/WeShare.Web.csproj
@@ -13,6 +13,7 @@
     <RootNamespace>WeShare</RootNamespace>
     <AssemblyName>WeShare</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <UseIISExpress>false</UseIISExpress>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -50,6 +51,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Images\img_complete.jpg" />
     <Content Include="Images\img_delete.gif" />
     <Content Include="Images\img_edit.gif" />
     <Content Include="Scripts\additional-methods.js" />
