Added helper class to log errors in the application and a page to redirec the user to when an error occurs in the application

--- a/SourceCode/WeShare.WebHelper/WeShare.WebHelper.csproj
+++ b/SourceCode/WeShare.WebHelper/WeShare.WebHelper.csproj
@@ -44,6 +44,7 @@
     <Compile Include="BasePage.cs">
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="ExceptionUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
