--- a/SourceCode/WeShare.BusinessModel/WeShare.BusinessModel.csproj
+++ b/SourceCode/WeShare.BusinessModel/WeShare.BusinessModel.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions.cs" />
+    <Compile Include="GroupInfo.cs" />
     <Compile Include="TaskAssignmentInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaskInfo.cs" />
