--- a/SourceCode/WeShare/WeShare.Web.csproj
+++ b/SourceCode/WeShare/WeShare.Web.csproj
@@ -93,8 +93,10 @@
     <Content Include="WebForms\ErrorPage.aspx" />
     <Content Include="WebForms\Home.aspx" />
     <Content Include="WebForms\Login.aspx" />
+    <Content Include="WebForms\ManageGroups.aspx" />
     <Content Include="WebForms\ManageTasks.aspx" />
     <Content Include="WebForms\ManageUsers.aspx" />
+    <Content Include="WebForms\ManageUsersDetails.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -126,6 +128,13 @@
     <Compile Include="WebForms\Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
+    <Compile Include="WebForms\ManageGroups.aspx.cs">
+      <DependentUpon>ManageGroups.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebForms\ManageGroups.aspx.designer.cs">
+      <DependentUpon>ManageGroups.aspx</DependentUpon>
+    </Compile>
     <Compile Include="WebForms\ManageTasks.aspx.cs">
       <DependentUpon>ManageTasks.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -139,6 +148,13 @@
     </Compile>
     <Compile Include="WebForms\ManageUsers.aspx.designer.cs">
       <DependentUpon>ManageUsers.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebForms\ManageUsersDetails.aspx.cs">
+      <DependentUpon>ManageUsersDetails.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebForms\ManageUsersDetails.aspx.designer.cs">
+      <DependentUpon>ManageUsersDetails.aspx</DependentUpon>
     </Compile>
     <Compile Include="WebForms\WeShare.Master.cs">
       <DependentUpon>WeShare.Master</DependentUpon>
