--- a/SourceCode/WeShare.BusinessModel/WeShare.BusinessModel.csproj
+++ b/SourceCode/WeShare.BusinessModel/WeShare.BusinessModel.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="GroupInfo.cs" />
     <Compile Include="TaskAssignmentInfo.cs" />
