Checked in the project file related to tests to the solution

--- a/SourceCode/WeShare.Test/WeShare.Test.csproj
+++ b/SourceCode/WeShare.Test/WeShare.Test.csproj
@@ -51,7 +51,11 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLTasksTest.cs" />
+    <Compile Include="DAGroupsTest.cs" />
     <Compile Include="DATaskAssignmentTest.cs" />
+    <Compile Include="DATasksTest.cs" />
+    <Compile Include="DAUserTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
